@@ -2,8 +2,7 @@
 <!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
-<a href="university-physics-volume-1.toc.html">Back to table of contents</a><head>
-    <title>Table of Contents</title>
+<a href="../../index.html">Back to index page</a>    <title>Table of Contents</title>
     <link rel="stylesheet" type="text/css" href="the-style-epub.css"/>
   </head>
   <body>
@@ -1369,7 +1368,7 @@
 </ol>
 </nav>
 
-<a href="university-physics-volume-1.toc.html">Back to table of contents</a>
+<a href="../../index.html">Back to index page</a>
 </body>
 </html>
 <!-- # sourceMappingURL=university-physics-volume-1.toc.html.map -->
