@@ -1,5 +1,5 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
-<a href="university-physics-volume-2.toc.html">Back to table of contents</a>  <head>
+  <a href="../../index.html">Back to index page</a>
     <title>Table of Contents</title>
     <link rel="stylesheet" type="text/css" href="the-style-epub.css"/>
   </head>
@@ -1293,7 +1293,7 @@
 </ol>
 </nav>
   
-<a href="university-physics-volume-2.toc.html">Back to table of contents</a>
+<a href="../../index.html">Back to index page</a>
 </body>
 </html>
 <!-- # sourceMappingURL=university-physics-volume-2.toc.html.map -->
