@@ -12,3 +12,6 @@ I had to do this in all three folders because I didn't want to go change the fil
 
 I also added the style sheet link to each of the table of contents files. 
 I added it just under the title in the head section of the file. 
+
+The convert-to-html.py added a link to table of contents at the top of the table of contents page, so I
+replaced it with a back to index link. 
